network-policy/egress-deny-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-default-deny
  namespace: qa
spec:
  podSelector: {}
  policyTypes:
  - Egress
