network-policy/ingress-deny-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: qa
  name: ingress-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
