network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
      cidr: 182.213.0.0/16
    - namespaceSelector:
      matchLabels:
      	project: mywebapp
    - podSelector:
        matchLabels:
      	  app: frontend
    ports:
      - protocol: TCP
    port: 3000

  egress:
  - to:
    - ipBlock:
      cidr: 30.204.218.0/24
    ports:
      - protocol: TCP
    port: 80
